# libnm-rs

./: Cargo.toml  Gir.toml  README.md
gir-files/: NM-1.0.gir
src/: lib.rs
src/auto/: client.rs  mod.rs  versions.txt
sys/: Cargo.toml  Gir.toml  build.rs
sys/src/: lib.rs
sys/tests/: abi.rs  constant.c  layout.c
