[package]
name = "nm"
version = "0.1.0"
edition = "2021"
#build = "build.rs"

[dependencies]
libc = "0.2"
glib = "0.15.10"
gio = "0.15.10"
ffi = { package = "nm-sys", path = "sys" }

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v1 = []
v1_2 = ["v1"]
v1_4 = ["v1_2"]
v1_6 = ["v1_4"]
v1_8 = ["v1_6"]
v1_10 = ["v1_8"]
v1_12 = ["v1_10"]
v1_14 = ["v1_12"]
v1_16 = ["v1_14"]
v1_18 = ["v1_16"]
v1_20 = ["v1_18"]
v1_22 = ["v1_20"]
v1_24 = ["v1_22"]
v1_26 = ["v1_24"]
v1_28 = ["v1_26"]
v1_30 = ["v1_28"]
v1_32 = ["v1_30"]
v1_34 = ["v1_32"]
dox = []
