[package]
name = "nm-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
[package.metadata.system-deps.libnm]
name = "libnm"
version = "0"

[package.metadata.system-deps.libnm.v1]
version = "1"

[package.metadata.system-deps.libnm.v1_2]
version = "1.2"

[package.metadata.system-deps.libnm.v1_4]
version = "1.4"

[package.metadata.system-deps.libnm.v1_6]
version = "1.6"

[package.metadata.system-deps.libnm.v1_8]
version = "1.8"

[package.metadata.system-deps.libnm.v1_10]
version = "1.10"

[package.metadata.system-deps.libnm.v1_12]
version = "1.12"

[package.metadata.system-deps.libnm.v1_14]
version = "1.14"

[package.metadata.system-deps.libnm.v1_16]
version = "1.16"

[package.metadata.system-deps.libnm.v1_18]
version = "1.18"

[package.metadata.system-deps.libnm.v1_20]
version = "1.20"

[package.metadata.system-deps.libnm.v1_22]
version = "1.22"

[package.metadata.system-deps.libnm.v1_24]
version = "1.24"

[package.metadata.system-deps.libnm.v1_26]
version = "1.26"

[package.metadata.system-deps.libnm.v1_28]
version = "1.28"

[package.metadata.system-deps.libnm.v1_30]
version = "1.30"

[package.metadata.system-deps.libnm.v1_32]
version = "1.32"

[package.metadata.system-deps.libnm.v1_34]
version = "1.34"
[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15.10"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15.10"

[dependencies.gio]
package = "gio-sys"
version = "0.15.10"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v1 = []
v1_2 = ["v1"]
v1_4 = ["v1_2"]
v1_6 = ["v1_4"]
v1_8 = ["v1_6"]
v1_10 = ["v1_8"]
v1_12 = ["v1_10"]
v1_14 = ["v1_12"]
v1_16 = ["v1_14"]
v1_18 = ["v1_16"]
v1_20 = ["v1_18"]
v1_22 = ["v1_20"]
v1_24 = ["v1_22"]
v1_26 = ["v1_24"]
v1_28 = ["v1_26"]
v1_30 = ["v1_28"]
v1_32 = ["v1_30"]
v1_34 = ["v1_32"]
dox = []
